--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -29,7 +29,8 @@
     ]
   },
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "../shared"
   ],
   "exclude": [
     "node_modules",
