Edit Student created, changing from double to single quotes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "dayjs": "^1.10.4",
     "http-proxy-middleware": "^1.1.0",
     "react": "^17.0.2",
@@ -45,7 +49,14 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "semi": "error",
+      "quotes": [
+        "error",
+        "single"
+      ]
+    }
   },
   "browserslist": {
     "production": [
