--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -4,16 +4,21 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
-  "ecmaVersion": 2018,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
   "env": {
-   "node": true,
-   "es6": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": 2,
-    "@typescript-eslint/no-var-requires": 0
+    "@typescript-eslint/no-var-requires": 0,
+    "semi": "error",
+    "quotes": [
+      "error",
+      "single"
+    ]
   }
 }
