Add Lessons Created

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@tsed/di": "^6.37.2",
     "@tsed/exceptions": "^6.37.2",
     "@tsed/json-mapper": "^6.37.2",
+    "@tsed/multipartfiles": "^5.65.9",
     "@tsed/passport": "^6.37.2",
     "@tsed/platform-express": "^6.37.2",
     "@tsed/schema": "^6.37.2",
@@ -32,8 +33,10 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31"
@@ -45,6 +48,7 @@
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
     "@types/method-override": "^0.0.31",
     "@types/multer": "^1.4.5",
