--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,17 @@
     "@tsed/schema": "^6.37.2",
     "@tsed/socketio": "^6.37.2",
     "@tsed/typeorm": "^6.37.2",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
+    "@types/express": "^4.17.11",
+    "@types/method-override": "^0.0.31",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.37",
+    "@types/passport": "^1.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "ajv": "^8.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -39,23 +50,13 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@tsed/cli-plugin-eslint": "2.12.0",
     "@tsed/cli-plugin-passport": "2.12.0",
     "@tsed/cli-plugin-typeorm": "2.12.0",
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/crypto-js": "^4.0.1",
-    "@types/express": "^4.17.11",
-    "@types/method-override": "^0.0.31",
-    "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.37",
-    "@types/passport": "^1.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
     "concurrently": "^6.0.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -63,8 +64,7 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "tsconfig-paths": "^3.9.0"
   },
   "tsed": {
     "packageManager": "yarn",
