--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/reactstrap": "^8.7.2",
     "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -30,22 +38,14 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "node-sass": "^5.0.0",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/reactstrap": "^8.7.2",
-    "node-sass": "^5.0.0",
-    "typescript": "^4.2.3"
+    "@testing-library/user-event": "^12.1.10"
   },
   "eslintConfig": {
     "extends": [
