--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "E-Learning",
+  "name": "e-learning",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/AllenKunn16/E-Learning",
   "author": "Allen Elguira <AllenElguira16@gmail.com>",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build ",
+    "build": "cd frontend && npm install --production && npm run build && cd ../backend && npm install --production && npm run build",
     "start": "cd backend && npm run start:prod"
   },
   "license": "MIT"
