--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/AllenKunn16/E-Learning",
   "author": "Allen Elguira <AllenElguira16@gmail.com>",
   "scripts": {
-    "build": "cd frontend && npm install --production && npm run build && cd ../backend && npm install --production && npm run build",
-    "start": "cd backend && npm run start:prod"
+    "build": "cd frontend && yarn install --production && yarn build && cd ../backend && yarn install --production && yarn build",
+    "start": "yarn start:prod"
   },
   "license": "MIT",
   "engines": {
