--- a/backend/package.json
+++ b/backend/package.json
@@ -32,10 +32,14 @@
     "@types/cors": "^2.8.10",
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/method-override": "^0.0.31",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@types/passport": "^1.0.6",
+    "@types/passport-http": "^0.3.8",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "ajv": "^8.0.1",
@@ -46,9 +50,13 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
