--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "ajv": "^8.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-typeorm": "^1.1.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
