--- a/backend/src/config/typeorm/default.config.json
+++ b/backend/src/config/typeorm/default.config.json
@@ -5,13 +5,13 @@
   "synchronize": true,
   "logging": false,
   "entities": [
-    "${rootDir}/entity/**/*.{js,ts}"
+    "${rootDir}/entities/**/*.{js,ts}"
   ],
   "migrations": [
-    "${rootDir}/migration/**/*.{js,ts}"
+    "${rootDir}/migrations/**/*.{js,ts}"
   ],
   "subscribers": [
-    "${rootDir}/subscriber/**/*.{js,ts}"
+    "${rootDir}/subscribers/**/*.{js,ts}"
   ],
   "cli": {
     "entitiesDir": "${rootDir}/entity",
